syntax = "proto3";

option go_package = "/onboarding";
import "artist.proto";
import "google/protobuf/empty.proto";
//    protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative -I../../artist/proto  -I../proto -I../../track/proto  -I../../album/proto  -I../../playlist/proto  -I../../session/proto  -I../../image/proto onboarding.proto

service OnboardingService {
  rpc GetArtists(google.protobuf.Empty) returns (ArtistsBase) {}
  rpc GetGenres(google.protobuf.Empty) returns (GenresBase) {}
  rpc SaveGenres(GenreOnboarding) returns (google.protobuf.Empty) {}
  rpc SaveArtists(ArtistOnboarding) returns (google.protobuf.Empty) {}
}

message GenreBase {
  uint64 Id = 1;
  string Name = 2;
  string Preview = 3;
}

message GenresBase {
  repeated GenreBase Genres = 1;
}

message GenreOnboarding {
  GenresBase Genres = 1;
  string UserId = 2;
}

message ArtistOnboarding {
  ArtistsBase Artists = 1;
  string UserId = 2;
}
